[package]
name = "esphome"
version = "0.1.0"
edition = "2018"
description = "ESPHome API client for Rust."
repository = "https://github.com/pixelspark/esphome-rs"
license = "MIT"

[lib]
name = "esphome"
path = "src/lib.rs"

[dependencies]
protobuf = "2"
thiserror = "*"
num-traits = "0.2"
num-derive = "0.2"

[dev-dependencies]
structopt = "0.3"

[build-dependencies]
protobuf-codegen-pure = "2.3"